# zero-shot-classification-examples

./: LICENSE  README.md  Zero-shot examples.ipynb  models.py  pyproject.toml  utils.py
data/: female.txt  male.txt
zeroshot/: __main__.py  interface.py  models.py
